tests/NormalTests/paczka1/small_fuzzy/42928287.err
Error in line 1: RRExrlYZ A588 38,9
Error in line 3: S395 S395 15,0
Error in line 9: S395 S261 68,6
